[project]
name = "acontext_core"
version = "0.1.20"
description = "Core for Acontext"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.7",
    "aiobotocore>=2.24.2",
    "anthropic>=0.67.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.4",
    "openai>=1.95.1",
    "pgvector>=0.4.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
    "opentelemetry-api>=1.32.0",
    "opentelemetry-sdk>=1.32.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.32.0",
    "opentelemetry-instrumentation-fastapi>=0.54.0",
    "opentelemetry-instrumentation-dbapi>=0.54.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.54.0",
    "opentelemetry-instrumentation-redis>=0.54.0",
    "httpx>=0.27.0",
    "opentelemetry-instrumentation-httpx>=0.54.0",
    "opentelemetry-instrumentation-openai-v2>=2.0.0",
    "opentelemetry-instrumentation-anthropic>=0.35.0",
    "opentelemetry-instrumentation-aio-pika>=0.54.0",
    "aiobotocore-otel>=1.1.0",
    "e2b-code-interpreter>=2.4.1",
    "novita-sandbox>=1.0.4",
    "urllib3>=2.6.3",
    "boto3>=1.42.19",
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.0.0", "pytest-cov>=6.2.1"]
